# menudealmoco

./: .gitignore  AWS_COST_ESTIMATE.md  DEV_QUICKSTART.md  GOOGLE_AUTH_COMPLETE.md  QUICKSTART.md  README.md  REORGANIZATION_SUMMARY.md  TESTING_GUIDE.md  backend.txt  basedeadados.txt  docker-compose.prod.yml  docker-compose.yml  ec2-secrets-policy.json  file.txt  frontend.txt  howtodeploy.txt  issue.txt  mvp.txt  restaurantoadd.txxt  returns.txt  start-dev.bat
backend/: .dockerignore  Dockerfile  add_test_users.py  menudealmoco.db  migrate_add_photos.py  populate_db.py  pyproject.toml  run.py  serve.py
backend_jwt/: .env.example  Dockerfile  add_google_oauth_columns.py  add_hours_column.py  add_reviewer_system.py  add_subenshi.py  make_password_nullable.py  pyproject.toml  update_bread_to_couvert.sql
backend_jwt/app/: main.py
backend_jwt/app/auth/: middleware.py  security.py
backend_jwt/app/database/: models.py
backend_jwt/app/maintenance/: README.md  S3_SETUP.md  __init__.py  add_indexes.py  backup.py  cleanup.py  s3_backup.py
backend_jwt/app/models/: restaurant.py
backend_jwt/app/routes/: auth.py  edit_suggestions.py  reports.py  restaurants.py  reviewer_applications.py  reviews.py
backend_jwt/scripts/: setup_cron.sh
deployment/: docker-compose.local.yml  docker-compose.prod.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  LOCAL_DOCKER_GUIDE.md  PROJECT_STRUCTURE.md  SECURITY_AUDIT_REPORT.md  restaurant_data_format.md
frontend_1/: .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+126 files in other folders)
